# dtscon

./: .gitignore  Makefile.in  config.h.in  configure  index.html  params.json  project.config
src/: Makefile.am  Makefile.in  dtscon.c  genconf.c  nform.c  nmenu.c  sysreconf.c
